Fix scrollbars in screen-accounts

--- a/screen-accounts/screen-accounts.css
+++ b/screen-accounts/screen-accounts.css
@@ -4,7 +4,8 @@
 x-accounts-list {
     width: 100%;
     flex-grow: 1;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin-bottom: 24px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
     flex-direction:  column;
